--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,7 @@ jobs:
 
       - name: Run flake8
         run: |
+          pip install black
+          black
           pip install flake8
           flake8
